--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.913.0",
     "@prisma/client": "^5.7.1",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
