--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "seed": "node prisma/seed.js",
     "test": "jest --coverage",
@@ -20,10 +20,9 @@
     "collaborative",
     "art"
   ],
-  "author": "Your Name",
+  "author": "The Human Monument Team",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.913.0",
     "@prisma/client": "^5.7.1",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
